--- a/goodtables.yml
+++ b/goodtables.yml
@@ -1,23 +1,5 @@
-# .goodtables.yml should conform to the format at https://github.com/frictionlessdata/goodtables.io/blob/master/goodtablesio/schemas/job-conf.yml
-
-# validate all csv files without reference to the datapackages
-#
-# files: '*.csv'
-
-# validate a mixture of csv files optionally with a tableschema
-#
-#files:
-# - 
-#   source: 'functiemix/data/functiemix-instellingen.csv'
-#  schema: 'functiemix/data/fm-schema-instellingen.json'
-#  - source: pathway/data/all_organisations_by_country.csv
-
-# validate datapackages that reference csv files
-#
+settings:
+  row_limit: 10000
+  
 datapackages:
-# - owis_bo/datapackage.json
  - adressen/datapackage.json
-# - test/datapackage.json
-# - functiemix/datapackage.json
-# - rio-objecten-v0/datapackage.json
-
